# Reality-Lens

./: .gitignore  .vsconfig  ARCHITECTURE.md  AUTH_IMPLEMENTATION_SUMMARY.md  AUTOMATION-ACTIVE.md  CLARITY-DONE.md  DEPLOYMENT.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_GUIDE.md  DEXATRONIX_COMPLETE.md  DEXATRONIX_INTEGRATION.md  INTELLIGENCE_ENGINE.md  LICENSE  OBSERVABILITY.md  PLATFORM_GUIDE.md  POSITIONING_ENGINE_SUMMARY.md  PRODUCTION-BUILD.md  PRODUCTION.md  PRODUCTION_CHECKLIST.md  QUICKSTART.md  README.SmartPickAI.md  README.md  ROLE_PERMISSION_MATRIX.md  SECURITY_ARCHITECTURE.md  SETUP.md  STATUS.md  SmartPickAI.sln  Start-RealityLensOS.ps1  Start-RealityLensOS.ps1.bak  WEBSOCKET_ARCHITECTURE.md  build-all.ps1  clarity-local-check.ps1  docker-compose.prod.yml  docker-compose.yml  jsconfig.json  smartpick-ai.csproj  start-all.ps1  start-platform.ps1  start-production.ps1  tsconfig.json
.github/: copilot-instructions.md
app/: index.html  script.js  (+3 more)
vision-service/: .gitignore  Dockerfile  INTEGRATION_SUMMARY.md  ML_INTEGRATION.md  QUICKSTART_ML.md  pyproject.toml
vision-service/models/: .gitkeep  README.md
vision-service/src/: main.py
vision-service/src/config/: models.yaml
vision-service/src/ml/: __init__.py  model_loader.py  pose_pipeline.py
vision-service/src/observability/: logging.py  metrics.py  tracing.py
vision-service/src/routers/: process.py
vision-service/src/services/: detect_layout.py  posture_estimation.py  risk_scoring.py
vision-service/tests/: test_health.py
vision-service/tools/: convert_movenet_to_onnx.py  test_ml_integration.py
(+251 files in other folders)
